[tool.poetry]
name = "mkdocs-test"
version = "0.1.0"
description = ""
authors = ["Shunpoco <tkngsnsk313320@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
